# quant-dojo

./: .env.example  .gitignore  ALPHA_THEORY_2026.md  BRAINSTORM.md  CHINA_QUANT_GUIDE.md  CLAUDE.md  GOAL.md  GOAL_control_plane_convergence.md  GOAL_dashboard.md  GOAL_factor_to_portfolio_pipeline.md  GOAL_phase4.md  GOAL_phase5_infra.md  GOAL_phase5_paper_trading_readiness.md  GOAL_strategy_validation_gate.md  GOAL_v6_admission_push.md  GOAL_v6_biweekly_rebalance_eval.md  GOAL_v7_admission_full.md  GOAL_v7_industry_neutral_candidate.md  LICENSE  LOOP_PROMPT.md  Makefile  PORTFOLIO_PLAN.md  README.md  README.zh-CN.md  ROADMAP.md  TODO.md  VERIFY.md  WORKFLOW.md  WORKPLAN.md  pyproject.toml  requirements.txt  test_push.txt  vercel.json
.claude/: decisions.md  loop-context.md  skipped.md  verification_phase5.md
.githooks/: post-commit
agents/: __init__.py  base.py  data_agent.py  debate.py  executor_agent.py  factor_analyst.py  factor_doctor.py  factor_miner.py  fund_manager.py  idea_parser.py  quant_mentor.py  reporter.py  risk_guard.py  signal_producer.py  stock_analyst.py  strategy_composer.py  test_debate.py
archive/: README.md  WORKPLAN.md
backtest/: __init__.py  comparison.py  engine.py  report.py  standardized.py
config/: config.example.yaml
dashboard/: __init__.py  app.py
data/: README.md
journal/: README.md  a_share_quant_deep_dive_20260421.md  breadth_regime_research_20260417.md  bta_experiment_terminal_20260421.md  candidate_review_20260416.md  candidate_review_20260417.md  cross_factor_regime_shift_20260422.md  daily_report_2026-04-03.md  (+106 more)
(+1088 files in other folders)
