[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-dojo"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pyarrow>=12.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["utils*", "strategies*", "backtest*", "research*", "agents*", "pipeline*", "live*", "dashboard*"]
